--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Website Background Image</title>
     <style>
         body {
-            background-image: url('/mnt/data/8B62AC42-733A-4099-BD4E-FFC25AACB5FE.jpg');
+            background-image: url('../../Downloads/IMG_1453.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
