--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Website Background Image</title>
     <style>
         body {
-            background-image: url('../../Downloads/IMG_1453.jpg');
+            background-image: <img src="../../Downloads/slide2-0881.jpg" height="2848" width="4288"/>;
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
