--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Background Image</title>
+    <title>Rest in Peace</title>
     <style>
         body {
-            background-image: <img src="../../Downloads/slide2-0881.jpg" height="2848" width="4288"/>;
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             height: 100vh;
             margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+        .caption {
+            margin-top: 20px;
+            font-size: 1.5em;
+            text-align: center;
         }
     </style>
 </head>
 <body>
+<img src="image.jpg" alt="image" />
+<div class="caption">Rest in peace</div>
 </body>
 </html>
