testing photo again

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-<img src="image.jpg" alt="image" />
+<img src="Screenshot%202024-10-09%20001735.png" alt="hello" />
 <div class="caption">Rest in peace</div>
 </body>
 </html>
