testing photo again beck

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rest in Peace</title>
+    <title>Missing Person</title>
     <style>
         body {
             display: flex;
@@ -14,21 +14,20 @@
             margin: 0;
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
-            color: #333;
+        }
+        h1 {
+            font-size: 96px;
+            margin: 0;
         }
         img {
             max-width: 100%;
             height: auto;
-        }
-        .caption {
             margin-top: 20px;
-            font-size: 1.5em;
-            text-align: center;
         }
     </style>
 </head>
 <body>
-<img src="Screenshot%202024-10-09%20001735.png" alt="hello" />
-<div class="caption">Rest in peace</div>
+<h1>Have you seen this man?</h1>
+<img src="Screenshot%202024-10-09%20003036.png" alt="Missing Person" />
 </body>
 </html>
